--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,52 @@
-# Ignore config file containing API keys
+# API Keys and Configuration
 config.js
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# OS specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# IDE specific files
+.idea/
+.vscode/
+*.sublime-workspace
+*.sublime-project
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Build directories
+dist/
+build/
+out/
+
+# Dependency directories
+node_modules/
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
 
 # IDE and editor files
 .vscode/
 .idea/
 *.swp
-*.swo
-
-# OS files
-.DS_Store
-Thumbs.db 
+*.swo 
