--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,61 @@
 # API Keys and Configuration
 config.js
 
+# Dependencies
+node_modules/
+bower_components/
+
+# Build outputs
+dist/
+build/
+out/
+.cache/
+
 # Environment variables
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+.env.*
 
-# OS specific files
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS files
 .DS_Store
+Thumbs.db
 .DS_Store?
 ._*
 .Spotlight-V100
 .Trashes
 ehthumbs.db
-Thumbs.db
 
-# IDE specific files
-.idea/
+# Editor directories
 .vscode/
+.idea/
 *.sublime-workspace
 *.sublime-project
 
+# Coverage and test
+coverage/
+.nyc_output/
+
+# OS specific files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# IDE specific files
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+
 # Logs
 logs
-*.log
-npm-debug.log*
-yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
@@ -45,7 +73,6 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
-coverage
 *.lcov
 
 # nyc test coverage
@@ -53,22 +80,6 @@ coverage
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
-
-# Bower dependency directory (https://bower.io/)
-bower_components
-
-# node-waf configuration
-.lock-wscript
-
-# Build directories
-dist/
-build/
-out/
-build/Release
-
-# Dependency directories
-node_modules/
-jspm_packages/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
@@ -101,7 +112,6 @@ web_modules/
 .yarn-integrity
 
 # parcel-bundler cache (https://parceljs.org/)
-.cache
 .parcel-cache
 
 # Next.js build output
